--- a/FacilityMobile/www/css/dashboard.css
+++ b/FacilityMobile/www/css/dashboard.css
@@ -1,67 +1,4 @@
 #dashboard {
-	font-family: Arial;
-	font-style: normal;
-	background: #a3acb7;
-	display: block;
-	width: 100%;
-	height: 300px;
-	margin-right: auto;
-	margin-left: auto;
-	-webkit-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .6);
-	-moz-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .6);
-	box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .6);
-	position: absolute;
-	top: 20px;
+	border-collapse:separate; border-spacing: 30px; 
 }
 
-#dashboard-menu {
-	position: absolute;
-	display: block;
-	left: -65em;
-	z-index: 2;
-	text-align: center;
-}
-
-#dashboard-menu ul li {
-	display: inline-block;
-	text-align: center;
-	margin-right: 2em;
-	margin-top: 1em;
-	color: #313235;
-	text-shadow: 0px 1px 0px #fff;
-	font-weight: bold;
-	
-	width: 100px;
-	min-height: 100px;
-	vertical-align: top;
-}
-
-li img {
-	margin-bottom: .7em;
-	border: 0;
-	cursor: pointer;
-} 
-
-#dot-container {
-	display: block;
-	width: 300%;
-	text-align: left;
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: 1;
-}
-
-.dot {
-	background: #1f1f1f;
-	width: 4px;
-	height: 4px;
-	display: inline-block;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	-webkit-box-shadow: 0px 1px 0px #ffffff;
-	-moz-box-shadow: 0px 1px 0px #ffffff;
-	box-shadow: 0px 1px 0px #ffffff;
-	margin-right: .3em;
-} 
